--- a/personalResume.htm
+++ b/personalResume.htm
@@ -2,7 +2,10 @@
 <html lang="zh-CN">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" type="text/css" href="http://img00.zhaopin.cn/2012/css/reset.min.css" media="all">
+    <title>个人简历-张庆阳</title>
+	<meta name="Keywords" content="个人简历，张庆阳，同济大学，合肥工业大学，计算机，软件">
+	<meta name="Description" content="张庆阳的个人简历">
+	<link rel="stylesheet" type="text/css" href="http://img00.zhaopin.cn/2012/css/reset.min.css" media="all">
     <link rel="stylesheet" type="text/css" href="http://my.zhaopin.com/css/new_v5/resume_preview.css" media="all">
 	<script language="javascript" type="text/javascript">
 	    var _dyweq = _dyweq || [];
@@ -183,7 +186,7 @@
             </dd>
              
              <dd>
-             <p   >合肥工业大学校科技与创新协会计算机兴趣小组组长，参加合肥工业大学校三下乡活动</p>
+             <p>合肥工业大学校科技与创新协会计算机兴趣小组组长，参加合肥工业大学校三下乡活动，合肥工业大学Freescale智能车实验室1年</p>
              </dd>
               
              <dd >
